SEC clear password. Implement Logout. Dependecy commons-codec